--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Hello world ! </h1>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="login.html">LogIn </a>
+        <a href="Deconexion.html">Deconnexion</a>
+    </nav>
+    
 </body>
 </html>
