--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Projets</title>
 </head>
 <body>
-    <h1>Hello world ! </h1>
+    
     <nav>
-        <a href="index.html">Accueil</a>
-        <a href="login.html">LogIn </a>
-        <a href="Deconexion.html">Deconnexion</a>
+        <a href="#">Accueil</a>
+        <a href="#">LogIn </a>
+        <a href="#">Sign Up</a>
     </nav>
     
 </body>
