Evolution de mon projet, ajout d'images à la page d'accueil, du menu et contact

--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Projets</title>
+    <link rel="stylesheet" href="script.js">
+    <title>FasFood</title>
 </head>
 <body>
-    
+        <img class="logo" src="images/logo.jpg" alt="">
+            <a class="lienrapidehaut" href="#">Commande personalisée</a>
+                <a class="lienrapidehaut" href="Menu.html">Voir Menu</a>
+                <a class="lienrapidehaut" href="#">Service traiteur</a>
     <nav>
-        <a href="#">Accueil</a>
-        <a href="#">LogIn </a>
-        <a href="#">Sign Up</a>
+        <a href="index.html">Accueil</a>
+            <a href="Menu.html">Menu </a>
+                <a href="contact.html">Contact</a>
     </nav>
-    <H1>Hello World !</H1>
-    
+    <div>
+        <h1>Bienvenue dans le monde des délices</h1>
+    </div>
+    <div>
+    <img class="imghaut" src="images/bur11.jpg" alt="">
+    <img class="imghaut" src="images/bur10.jpg" alt="">
+    <img class="imghaut" src="images/bur8.jpg" alt="">
+    <img class="imghaut" src="images/bur10.jpg" alt="">
+    <img class="imghaut" src="images/bur6.jpg" alt="">
+    <img class="imghaut" src="images/bur5.jpg" alt="">
+    <img class="imghaut" src="images/bur5.jpg" alt="">
+    <img class="imghaut" src="images/pizza1.jpg" alt="">
+    <img class="imghaut" src="images/pizza2.jpg" alt="">
+    <img class="imghaut" src="images/pizza3.jpg" alt="">
+    <img class="imghaut" src="images/shawerma1.jpg" alt="">
+    <img class="imghaut" src="images/KFC1.jpg" alt="">
+    <img class="imghaut" src="images/pizza6.jpg" alt="">
+    <img class="imghaut" src="images/pizza7.jpg" alt="">
+    <img class="imghaut" src="images/pizza8.jpg" alt="">
+    </div>
 </body>
 </html>
